--- a/scripts/simple-proxy-api.yaml.j2
+++ b/scripts/simple-proxy-api.yaml.j2
@@ -19,7 +19,7 @@ paths:
         responses:
           default:
             statusCode: 200
-        uri: arn:aws:apigateway:{{PROXY_API_REGION}}:lambda:path/2015-03-31/functions/arn:aws:lambda:{{PROXY_API_REGION}}:157369949994:function:${stageVariables.ServerlessExpressLambdaFunctionName}/invocations
+        uri: arn:aws:apigateway:{{AWS_DEFAULT_REGION}}:lambda:path/2015-03-31/functions/arn:aws:lambda:{{AWS_DEFAULT_REGION}}:157369949994:function:${stageVariables.ServerlessExpressLambdaFunctionName}/invocations
         passthroughBehavior: when_no_match
         httpMethod: POST
         type: aws_proxy
@@ -64,7 +64,7 @@ paths:
         type: string
       responses: {}
       x-amazon-apigateway-integration:
-        uri: arn:aws:apigateway:{{PROXY_API_REGION}}:lambda:path/2015-03-31/functions/arn:aws:lambda:{{PROXY_API_REGION}}:157369949994:function:${stageVariables.ServerlessExpressLambdaFunctionName}/invocations
+        uri: arn:aws:apigateway:{{AWS_DEFAULT_REGION}}:lambda:path/2015-03-31/functions/arn:aws:lambda:{{AWS_DEFAULT_REGION}}:157369949994:function:${stageVariables.ServerlessExpressLambdaFunctionName}/invocations
         httpMethod: POST
         type: aws_proxy
     options:
