Prefix function logic id with microservice name

--- a/scripts/template.yaml.j2
+++ b/scripts/template.yaml.j2
@@ -277,7 +277,7 @@ Resources:
   # RDSState:
     
 
-  AwsServerlessExpressFunction:
+  {{list[0]["MICRO_SERVICE_NAME"]}}Function:
     Type: AWS::Lambda::Function
     Properties:
       VpcConfig: 
